language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_partially_selected.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let a = 10\n  let b = 20\n  let c = a + b\n\n  echo c\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let a = 10
      ▔▔▔▔▔▔
  let b = 20
▔▔▔▔▔▔▔▔▔▔▔▔
  let c = a + b
▔▔▔▔▔▔↑        

  echo c
}


----- AFTER ACTION

pub fn main() {
  let c = function()

  echo c
}

fn function() -> Int {
  let a = 10
  let b = 20
  let c = a + b
  c
}
