language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_function_when_multiple_names_already_in_scope.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn function() { todo }\nfn function_2() { todo }\nfn function_3() { todo }\nfn function_4() { todo }\n\npub fn do_things(a, b) {\n  let result = {\n    let a = 10 + a\n    let b = 10 + b\n    a * b\n  }\n  result + 3\n}\n"
---
----- BEFORE ACTION

fn function() { todo }
fn function_2() { todo }
fn function_3() { todo }
fn function_4() { todo }

pub fn do_things(a, b) {
  let result = {
             ▔▔▔
    let a = 10 + a
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    let b = 10 + b
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    a * b
▔▔▔▔▔▔▔▔▔
  }
▔▔↑
  result + 3
}


----- AFTER ACTION

fn function() { todo }
fn function_2() { todo }
fn function_3() { todo }
fn function_4() { todo }

pub fn do_things(a, b) {
  let result = function_5(a, b)
  result + 3
}

fn function_5(a: Int, b: Int) -> Int {
  let a = 10 + a
    let b = 10 + b
    a * b
}
